--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
 	"name" : "heidelpay/php-api",
-	"description" : "Client libery for heidlepay payments.",
+	"description" : "Client library for heidelpay payments.",
 	"license" : "Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.",
+	"version" : "16.10.27",
 	"authors" : [{
 			"name" : "Jens Richter"
 		}
@@ -13,8 +14,7 @@
 		"ext-mcrypt" : "*"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~5",
-		"phpdocumentor/phpdocumentor" : "~2.9"
+		"phpunit/phpunit" : "~5"
 	},
 	"autoload" : {
 		"psr-4" : {
