--- a/composer.json
+++ b/composer.json
@@ -10,24 +10,28 @@
 		}
 	],
 	"require" : {
-		"php" : "~5.6.0|~7.0.0",
+		"php" : ">=5.6.0",
 		"lib-curl" : ">=7.26.0",
 		"lib-openssl" : ">=1.0.1.5",
 		"ext-mcrypt" : "*"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~5"
+		"phpunit/phpunit" : "~5.7"
 	},
 	"autoload" : {
 		"psr-4" : {
 			"Heidelpay\\PhpApi\\" : "lib"
 		}
 	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"Heidelpay\\Tests\\PhpApi\\Unit\\" : "tests/Unit"
+		}
+	},
 	"support" : {
 		"email" : "development@heidelpay.de"
 	},
 	"homepage" : "https://dev.heidelpay.de",
-	"minimum-stability" : "dev",
 	"type" : "library",
 	"keywords" : [
 		"payment-api",
