--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"ext-mcrypt" : "*"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~5.7"
+		"phpunit/phpunit" : "~5.7",
+		"friendsofphp/php-cs-fixer": "^2.0"
 	},
 	"autoload" : {
 		"psr-4" : {
