--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,23 @@
 language: php
-sudo: required
 dist: trusty
 
 matrix:
   fast_finish: true
   include:
     - php: 5.6
+      env: deps=no
     - php: 7
+      env: deps=no
+    - php: 7
+      env: deps=low
+    - php: 7
+      env: deps=high
     - php: 7.1
+      env: deps=no
+    - php: 7.1
+      env: deps=low
+    - php: 7.1
+      env: deps=high
 
 cache:
   directories:
@@ -19,8 +29,10 @@ before_script:
   - mkdir -p "$HOME/.php-cs-fixer"
   - phpenv config-rm xdebug.ini
   - composer self-update
-  - composer show --platform
-  - composer install --ignore-platform-reqs
+  - if [ "$deps" = "no" ]; then composer --prefer-dist install; fi;
+  - if [ "$deps" = "high" ]; then composer --prefer-source update; fi;
+  - if [ "$deps" = "low" ]; then composer --prefer-source --prefer-lowest --prefer-stable update; fi;
 
 script:
-  ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit
+  - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
