Add coveralls.io to Travis CI

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,8 @@
 
     <filter>
         <whitelist>
-            <directory>./src/</directory>
+            <directory>./lib/</directory>
         </whitelist>
     </filter>
+
 </phpunit>
