--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
-    "friendsofphp/php-cs-fixer": "^2.0"
+    "friendsofphp/php-cs-fixer": "^2.0",
+    "satooshi/php-coveralls": "^1.0"
   },
   "autoload": {
     "psr-4": {
