--- a/composer.json
+++ b/composer.json
@@ -14,22 +14,17 @@
   "require": {
     "php" : ">=5.6.0",
     "lib-curl" : "*",
-    "lib-openssl" : "*",
-    "ext-mcrypt" : "*"
+    "lib-openssl" : "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
     "friendsofphp/php-cs-fixer": "^2.0",
-    "satooshi/php-coveralls": "^1.0"
+    "satooshi/php-coveralls": "^1.0",
+    "phpdocumentor/phpdocumentor": "v2.9.0"
   },
   "autoload": {
     "psr-4": {
       "Heidelpay\\PhpApi\\": "lib"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Heidelpay\\Tests\\PhpApi\\Unit\\": "tests/Unit"
     }
   },
   "support": {
