--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "heidelpay/php-api",
   "description": "Client library for heidelpay payments.",
   "license": "Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.",
-  "version": "17.1.17",
-  "authors": [
+    "authors": [
     {
       "name": "Jens Richter"
     },
@@ -19,7 +18,8 @@
   "require-dev": {
     "phpunit/phpunit": "~5.7",
     "friendsofphp/php-cs-fixer": "^2.0",
-    "satooshi/php-coveralls": "^1.0"
+    "satooshi/php-coveralls": "^1.0",
+    "heidelpay/phpdocumentor": "2.9.1"
   },
   "autoload": {
     "psr-4": {
