--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
 		"satooshi/php-coveralls" : "^1.0",
 		"heidelpay/phpdocumentor" : "2.9.1"
 	},
+	"suggest": {
+		"heidelpay/php-customer-messages": "17.2.3"
+	},
 	"autoload" : {
 		"psr-4" : {
 			"Heidelpay\\PhpApi\\" : "lib"
