--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,13 @@
 		},
 		{
 			"name": "Stephano Vogel"
+		},
+		{
+			"name" : "Daniel Kraut"
 		}
 	],
 	"require" : {
-		"php" : ">=5.6.0",
+		"php" : ">=5.5.0",
 		"lib-curl" : "*",
 		"lib-openssl" : "*",
 		"ext-simplexml": "*"
