--- a/composer.json
+++ b/composer.json
@@ -1,50 +1,55 @@
 {
-	"name" : "heidelpay/php-api",
-	"description" : "Client library for heidelpay payments.",
-	"license" : "Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.",
-	"authors" : [
-		{
-			"name" : "Jens Richter"
-		},
-		{
-			"name" : "Ronja Wann"
-		},
-		{
-			"name": "Stephano Vogel"
-		},
-		{
-			"name" : "Daniel Kraut"
-		}
-	],
-	"require" : {
-		"php" : ">=5.6.0",
-		"lib-curl" : "*",
-		"lib-openssl" : "*",
-		"ext-simplexml": "*"
-	},
-	"require-dev" : {
-		"phpunit/phpunit" : "~5.7",
-		"friendsofphp/php-cs-fixer" : "^2.0",
-		"satooshi/php-coveralls" : "^1.0",
-		"heidelpay/phpdocumentor" : "2.9.1"
-	},
-	"suggest": {
-		"heidelpay/php-customer-messages": "17.2.3"
-	},
-	"autoload" : {
-		"psr-4" : {
-			"Heidelpay\\PhpApi\\" : "lib"
-		}
-	},
-	"support" : {
-		"email" : "development@heidelpay.de"
-	},
-	"homepage" : "https://dev.heidelpay.de",
-	"type" : "library",
-	"keywords" : [
-		"payment-api",
-		"php",
-		"api",
-		"sdk"
-	]
+    "name": "heidelpay/php-api",
+    "description": "Client library for heidelpay payments.",
+    "license": "Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.",
+    "authors": [
+        {
+            "name": "Jens Richter"
+        },
+        {
+            "name": "Ronja Wann"
+        },
+        {
+            "name": "Stephano Vogel"
+        },
+        {
+            "name": "Daniel Kraut"
+        }
+    ],
+    "require": {
+        "php": ">=5.6.0",
+        "lib-curl": "*",
+        "lib-openssl": "*",
+        "ext-SimpleXML": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~5.7",
+        "friendsofphp/php-cs-fixer": "^2.0",
+        "satooshi/php-coveralls": "^1.0",
+        "heidelpay/phpdocumentor": "2.9.1"
+    },
+    "suggest": {
+        "heidelpay/php-customer-messages": "You can use this package to provide user-friendly messages instead of error codes."
+    },
+    "autoload": {
+        "psr-4": {
+            "Heidelpay\\PhpApi\\": "lib"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Heidelpay\\Tests\\PhpApi\\": "tests"
+        }
+    },
+    "support": {
+        "email": "development@heidelpay.de"
+    },
+    "homepage": "https://dev.heidelpay.de",
+    "type": "library",
+    "keywords": [
+        "payment-api",
+        "php",
+        "api",
+        "sdk"
+    ]
 }
