Removed redundant null assignments and set()-methods, added tests for toJson and jsonSerialize

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,8 +15,8 @@
     </testsuite>
 
     <filter>
-        <whitelist>
-            <directory>./lib/</directory>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./lib</directory>
         </whitelist>
     </filter>
 
