[cleanup] Fixed code smells and applied best practices.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         },
         {
             "name": "Daniel Kraut"
+        },
+        {
+            "name": "Simon Gabriel"
         }
     ],
     "require": {
