--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,10 @@ before_script:
   - if [ "$deps" = "no" ]; then composer --prefer-dist install; fi;
   - if [ "$deps" = "high" ]; then composer --prefer-source update; fi;
 
-
 script:
-  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+#  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+  - ./vendor/bin/codecept build
+  - ./vendor/bin/codecept run unit
   - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
 
 after_success:
