--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,8 @@ before_script:
 script:
 #  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
   - ./vendor/bin/codecept build
-  - ./vendor/bin/codecept run unit
+  - ./vendor/bin/codecept run unit --coverage --coverage-xml
   - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
+  - travis_retry php vendor/bin/coveralls -v
 
 after_success:
-
-  - travis_retry php vendor/bin/coveralls -v
