--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,8 @@ before_script:
   - if [ "$deps" = "high" ]; then composer --prefer-source update; fi;
 
 script:
-#  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
   - ./vendor/bin/codecept build
-  - ./vendor/bin/codecept run unit --coverage --coverage-xml
+  - ./vendor/bin/codecept run unit --coverage --coverage-xml='./build/logs/clover.xml'
   - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
   - travis_retry php vendor/bin/coveralls -v
 
