--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,12 @@ before_script:
 script:
   - ./vendor/bin/codecept -V
   - ./vendor/bin/codecept build
-  - ./vendor/bin/codecept run unit --coverage --coverage-xml
+  - ./vendor/bin/codecept run unit Adapter/CurlAdapterTest.php --coverage --coverage-xml
+  - ls -la
+  - ls -la tests
+  - ls -la tests/_output
+  - ls -la build/
+  - ls -la build/log
   - travis_retry php vendor/bin/coveralls -v
 #  - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
 
