[bugfix] Moved test helper classes to known namespace.

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Heidelpay\\Tests\\PhpApi\\": "tests"
+            "Heidelpay\\Tests\\PhpApi\\": "tests",
+            "Heidelpay\\Tests\\PhpApi\\Helper\\": "tests\\Helper"
         }
     },
     "support": {
