--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ cache:
     - $HOME/.local
 
 before_script:
-    ## disable xdebug
+    ## backup and disable xdebug
     - cp ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak
+    - echo > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
     - mkdir -p "$HOME/.php-cs-fixer"
     - mkdir -p build/logs
     - composer self-update
