--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ matrix:
   include:
     - php: 5.6
       env: deps=no
-#    - php: 7
-#      env: deps=no
-#    - php: 7
-#      env: deps=high
-#    - php: 7.1
-#      env: deps=no
-#    - php: 7.1
-#      env: deps=high
+    - php: 7
+      env: deps=no
+    - php: 7
+      env: deps=high
+    - php: 7.1
+      env: deps=no
+    - php: 7.1
+      env: deps=high
 
 
 cache:
