--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script:
     ## backup and disable xdebug
     - cp ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak
     - echo > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
+    - phpenv rehash
     - mkdir -p "$HOME/.php-cs-fixer"
     - mkdir -p build/logs
     - composer self-update
