--- a/codeception.yml
+++ b/codeception.yml
@@ -12,3 +12,8 @@ coverage:
     enabled: true
     include:
         - lib/*
+settings:
+    bootstrap: ..\bootstrap.php
+    suite_class: \PHPUnit_Framework_TestSuite
+    colors: true
+    log: true
