--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "satooshi/php-coveralls": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.0",
         "heidelpay/phpdocumentor": "2.9.1",
-        "codeception/codeception": "^2.3"
+        "codeception/codeception": "^2.3",
+        "codeception/aspect-mock": "^2.1"
     },
     "suggest": {
         "heidelpay/php-customer-messages": "You can use this package to provide user-friendly messages instead of error codes."
