--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "friendsofphp/php-cs-fixer": "^2.0",
         "heidelpay/phpdocumentor": "2.9.1",
         "codeception/codeception": "^2.3",
-        "codeception/aspect-mock": "^2.1"
+        "codeception/aspect-mock": "^2.1",
+        "codacy/coverage": "^1.4"
     },
     "suggest": {
         "heidelpay/php-customer-messages": "You can use this package to provide user-friendly messages instead of error codes."
