--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,7 @@ cache:
     - $HOME/.local
 
 before_script:
-    echo 'Php Version:' $(phpenv version-name)
-
-#    ## backup and disable xdebug
+    ## backup and disable xdebug
 #    - cp ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak
 #    - echo > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
 #    - phpenv rehash
@@ -41,9 +39,9 @@ script:
 #    - mv ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
 #    - ./vendor/bin/codecept build
 #    - ./vendor/bin/codecept run unit --coverage --coverage-xml
-##    - if [ "$(phpenv version-name)" = "" ]; then
-##      	bundle exec rake test:integration
-##      fi
+    - if [ "$(phpenv version-name)" = 7 ]; then
+      	echo ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> PHP VERSION 7 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<"
+      fi
 
 after_success:
 #    - php vendor/bin/codacycoverage clover tests/_output/coverage.xml
