--- a/.travis.yml
+++ b/.travis.yml
@@ -24,24 +24,26 @@ cache:
 
 before_script:
     ## backup and disable xdebug
-#    - cp ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak
-#    - echo > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
-#    - phpenv rehash
-#    - mkdir -p "$HOME/.php-cs-fixer"
-#    - mkdir -p build/logs
-#    - composer self-update
-#    - if [ "$deps" = "no" ]; then composer --prefer-dist install; fi;
-#    - if [ "$deps" = "high" ]; then composer --prefer-source update; fi;
+    - cp ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak
+    - echo > ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
+    - phpenv rehash
+    - mkdir -p "$HOME/.php-cs-fixer"
+    - mkdir -p build/logs
+    - composer self-update
+    - if [ "$deps" = "no" ]; then composer --prefer-dist install; fi;
+    - if [ "$deps" = "high" ]; then composer --prefer-source update; fi;
 
 script:
-#    - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
-#    ## enable xdebug
-#    - mv ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
-#    - ./vendor/bin/codecept build
-#    - ./vendor/bin/codecept run unit --coverage --coverage-xml
+    - ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
+    ## enable xdebug
+    - mv ~/.phpenv/versions/$(phpenv version-name)/xdebug.ini.bak ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
+    - ./vendor/bin/codecept build
+    - ./vendor/bin/codecept run unit --coverage --coverage-xml
+    ## perform this task only for php 7 with deps=0
     - |
       if [[ ($(phpenv version-name) == "7") && ("$deps" == "no") ]]; then
-        echo ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> PHP VERSION 7 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<";
+        echo "Perform integration tests as well";
+        ./vendor/bin/codecept run integration
       fi
 
 after_success:
