[debug] Codacy: Changed exclude paths.

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,4 +47,4 @@ script:
       fi
 
 after_success:
-#    - php vendor/bin/codacycoverage clover tests/_output/coverage.xml
+    - php vendor/bin/codacycoverage clover tests/_output/coverage.xml
