[change] Refactored composer.json and readme. Fixed code sniffer issues.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "heidelpay/php-payment-api",
-    "description": "New client library for heidelpay payments.",
+    "description": "New client library for heidelpay payments replacing heidelpay/php-api.",
     "license": "Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.",
     "authors": [
         {
@@ -57,5 +57,8 @@
         "php",
         "api",
         "sdk"
-    ]
+    ],
+    "replace": {
+        "heidelpay/php-api":"*"
+    }
 }
