--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ dist: trusty
 matrix:
   fast_finish: true
   include:
+    - php: 5.6
+      env: deps=no
     - php: 7.0
       env: deps=no
     - php: 7.0
