--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-SimpleXML": "*"
     },
     "require-dev": {
+        "ext-json": "*",
         "friendsofphp/php-cs-fixer": "^2.0",
         "heidelpay/phpdocumentor": "2.9.1",
         "codeception/codeception": "~2.3.9",
