--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,6 @@
     "name": "heidelpay/php-payment-api",
     "description": "New client library for heidelpay payments replacing heidelpay/php-api.",
     "license": "proprietary",
-    "authors": [
-        {
-            "name": "Jens Richter"
-        },
-        {
-            "name": "Ronja Wann"
-        },
-        {
-            "name": "Stephano Vogel"
-        },
-        {
-            "name": "Daniel Kraut"
-        },
-        {
-            "name": "Simon Gabriel"
-        }
-    ],
     "require": {
         "php": ">=5.6.0",
         "lib-curl": "*",
@@ -31,7 +14,8 @@
         "heidelpay/phpdocumentor": "2.9.1",
         "codeception/codeception": "~2.3.9",
         "codeception/aspect-mock": "~3.0.0",
-        "codacy/coverage": "^1.4"
+        "codacy/coverage": "^1.4",
+        "heidelpay/php-basket-api": "^1.0"
     },
     "suggest": {
         "heidelpay/php-message-code-mapper": "You can use this package to provide user-friendly messages instead of error codes.",
