--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
         "php": ">=5.6.0",
         "lib-curl": "*",
         "lib-openssl": "*",
-        "ext-SimpleXML": "*"
+        "ext-SimpleXML": "*",
+        "ext-json": "*"
     },
     "require-dev": {
-        "ext-json": "*",
         "friendsofphp/php-cs-fixer": "^2.0",
         "heidelpay/phpdocumentor": "2.9.1",
         "codeception/codeception": "~2.3.9",
