--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
-        "heidelpay/phpdocumentor": "2.9.1",
         "codeception/codeception": "~2.3.9",
         "codeception/aspect-mock": "~3.0.0",
         "codacy/coverage": "^1.4",
-        "heidelpay/php-basket-api": "^1.0"
+        "heidelpay/php-basket-api": "^1.0",
+        "monolog/monolog":  "~1.6"
     },
     "suggest": {
         "heidelpay/php-message-code-mapper": "You can use this package to provide user-friendly messages instead of error codes.",
