--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.0",
-        "codeception/codeception": "~2.3.9",
-        "codeception/aspect-mock": "~3.0.0",
-        "codacy/coverage": "^1.4",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "codeception/codeception": "^4.1",
+        "codeception/aspect-mock": "^3.1",
         "heidelpay/php-basket-api": "^1.0",
-        "monolog/monolog":  "~1.6"
+        "monolog/monolog": "^1.25",
+        "codeception/module-asserts": "^1.2"
     },
     "suggest": {
         "heidelpay/php-message-code-mapper": "You can use this package to provide user-friendly messages instead of error codes.",
