--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "codeception/aspect-mock": "^3.1",
         "heidelpay/php-basket-api": "^1.0",
         "monolog/monolog": "^1.25",
-        "codeception/module-asserts": "^1.2"
+        "codeception/module-asserts": "^1.2",
+        "phpunit/phpunit": "^7.5"
     },
     "suggest": {
         "heidelpay/php-message-code-mapper": "You can use this package to provide user-friendly messages instead of error codes.",
